ajout attaque + getRange collisions